--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*Feel free to remove these styles or customise in your own stylesheet 👍*/
 
 .attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution a { color: hsl(228, 45%, 44%); }  /*3E52A3*/
 
 /* colors */
 /*
@@ -9,9 +9,9 @@ Very dark blue (main background): hsl(233, 47%, 7%)
 Dark desaturated blue (card background): hsl(244, 38%, 16%)
 Soft violet (accent): hsl(277, 64%, 61%)
 
-main background: #232A61;
+main background: #090b1a;
 card background: #1B1938;
-accent: #AA5CDB;
+soft violet: #aa5cdb;
 
 - White (main heading, stats): hsl(0, 0%, 100%)
 - Slightly transparent white (main paragraph): hsla(0, 0%, 100%, 0.75)
@@ -22,10 +22,96 @@ Mobile: 375px
 Desktop: 1440px
 
 */
+html { box-sizing: border-box; }
+*, ::after, ::before { box-sizing: inherit; }
 
-.body {
-  background-color: #232A61;
+body {
+  background-color: #090b1a;
   font-size: 15px;
   font-family: 'Inter', sans-serif;
   font-family: 'Lexend Deca', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+
+.main__frame {
+  max-width: 375px;
+  background-color: #1b1938;
+  padding: 20px;
+  margin: 50px auto;
+  color: white;
+  text-align: center;
+  border-radius: 0 0 10px 10px;
+}
+
+.photo{
+  display: block;
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+  filter: opacity(0.6) drop-shadow(0 0 0 #aa5cdb);
+}
+
+h1 {
+  font-size: 35px;
+}
+
+.text {
+  font-size: 18px;
+}
+
+.number {
+  margin-top: 40px;
+}
+
+.number__item {
+  margin-bottom: 30px;
+}
+
+.number__item h2,
+.number__item p {
+  margin: 0 auto;
+}
+.margin__item p {
+  margin-top: 5px;
+}
+
+@media screen and (min-width: 500px) {
+.main__frame {
+  display: flex;
+  flex-direction: row;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 0;
+  margin: 100px 80px;
+  border-radius: 10px;
+}
+.picture,
+.info {
+  width: 50%;
+}
+
+.picture {
+  order: 2;
+}
+.photo {
+  height: 100%;
+  border-radius: 0 10px 10px 0;
+}
+.info {
+  order: 1;
+  max-width: 100%;
+  padding: 5% 5% 0 5%;
+  text-align: left;
+}
+.number {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 10%;
+  margin-top: 70px;
+}
+
+.text {
+  font-size: 15px;
+}
 }
